--- a/analysis/characterizations.ipynb
+++ b/analysis/characterizations.ipynb
@@ -165,7 +165,7 @@
    "source": [
     "# Load log file\n",
     "names = [\"addr\", \"time\"] + [\"read_\" + str(i) for i in range(48)]\n",
-    "resetreaddata = pd.read_csv(\"../reset2.csv\", names=names, index_col=False, delimiter=\"\\t\")\n",
+    "resetreaddata = pd.read_csv(\"../data/reset.csv\", names=names, index_col=False, delimiter=\"\\t\")\n",
     "resetdata = np.delete(resetreaddata[resetreaddata.columns[-48:]].values, [19, 24, 29, 38, 43], axis=1).flatten()\n",
     "\n",
     "# Figure for post-RESET READ statistics\n",
