--- a/analysis/process_read_retention.ipynb
+++ b/analysis/process_read_retention.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -61,60 +61,48 @@
        "      <th>lvl</th>\n",
        "      <th>lvli</th>\n",
        "      <th>i</th>\n",
-       "      <th>tmin</th>\n",
-       "      <th>tmax</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1024</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>6</td>\n",
-       "      <td>6</td>\n",
        "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>8</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1024</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>8</td>\n",
-       "      <td>6</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1024</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>7</td>\n",
-       "      <td>6</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0</td>\n",
        "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1024</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>5</td>\n",
-       "      <td>6</td>\n",
-       "      <td>3</td>\n",
        "      <td>4</td>\n",
-       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1024</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>6</td>\n",
-       "      <td>6</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0</td>\n",
        "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -123,82 +111,70 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>62792219</th>\n",
-       "      <td>1057</td>\n",
-       "      <td>102106.323123</td>\n",
-       "      <td>37</td>\n",
-       "      <td>40</td>\n",
-       "      <td>11</td>\n",
-       "      <td>37</td>\n",
-       "      <td>41</td>\n",
+       "      <th>37183962</th>\n",
+       "      <td>1845</td>\n",
+       "      <td>11923.895216</td>\n",
+       "      <td>52</td>\n",
+       "      <td>53</td>\n",
+       "      <td>42</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>62792220</th>\n",
-       "      <td>1057</td>\n",
-       "      <td>102106.323123</td>\n",
-       "      <td>31</td>\n",
-       "      <td>40</td>\n",
-       "      <td>12</td>\n",
-       "      <td>37</td>\n",
-       "      <td>41</td>\n",
+       "      <th>37183964</th>\n",
+       "      <td>1845</td>\n",
+       "      <td>11923.895216</td>\n",
+       "      <td>49</td>\n",
+       "      <td>53</td>\n",
+       "      <td>44</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>62792221</th>\n",
-       "      <td>1057</td>\n",
-       "      <td>102106.323123</td>\n",
-       "      <td>37</td>\n",
-       "      <td>40</td>\n",
-       "      <td>13</td>\n",
-       "      <td>37</td>\n",
-       "      <td>41</td>\n",
+       "      <th>37183965</th>\n",
+       "      <td>1845</td>\n",
+       "      <td>11923.895216</td>\n",
+       "      <td>50</td>\n",
+       "      <td>53</td>\n",
+       "      <td>45</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>62792222</th>\n",
-       "      <td>1057</td>\n",
-       "      <td>102106.323123</td>\n",
-       "      <td>33</td>\n",
-       "      <td>40</td>\n",
-       "      <td>14</td>\n",
-       "      <td>37</td>\n",
-       "      <td>41</td>\n",
+       "      <th>37183966</th>\n",
+       "      <td>1845</td>\n",
+       "      <td>11923.895216</td>\n",
+       "      <td>50</td>\n",
+       "      <td>53</td>\n",
+       "      <td>46</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>62792223</th>\n",
-       "      <td>1057</td>\n",
-       "      <td>102106.323123</td>\n",
-       "      <td>40</td>\n",
-       "      <td>40</td>\n",
-       "      <td>15</td>\n",
-       "      <td>37</td>\n",
-       "      <td>41</td>\n",
+       "      <th>37183967</th>\n",
+       "      <td>1845</td>\n",
+       "      <td>11923.895216</td>\n",
+       "      <td>51</td>\n",
+       "      <td>53</td>\n",
+       "      <td>47</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>62792224 rows × 7 columns</p>\n",
+       "<p>30211947 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "          addr           time  lvl  lvli   i  tmin  tmax\n",
-       "0         1024       0.000000    6     6   0     4     8\n",
-       "1         1024       0.000000    8     6   1     4     8\n",
-       "2         1024       0.000000    7     6   2     4     8\n",
-       "3         1024       0.000000    5     6   3     4     8\n",
-       "4         1024       0.000000    6     6   4     4     8\n",
-       "...        ...            ...  ...   ...  ..   ...   ...\n",
-       "62792219  1057  102106.323123   37    40  11    37    41\n",
-       "62792220  1057  102106.323123   31    40  12    37    41\n",
-       "62792221  1057  102106.323123   37    40  13    37    41\n",
-       "62792222  1057  102106.323123   33    40  14    37    41\n",
-       "62792223  1057  102106.323123   40    40  15    37    41\n",
+       "          addr          time  lvl  lvli   i\n",
+       "0            0      0.000000   11     0   0\n",
+       "1            0      0.000000   16     0   1\n",
+       "2            0      0.000000   13     0   2\n",
+       "3            0      0.000000    4     0   3\n",
+       "4            0      0.000000   14     0   4\n",
+       "...        ...           ...  ...   ...  ..\n",
+       "37183962  1845  11923.895216   52    53  42\n",
+       "37183964  1845  11923.895216   49    53  44\n",
+       "37183965  1845  11923.895216   50    53  45\n",
+       "37183966  1845  11923.895216   50    53  46\n",
+       "37183967  1845  11923.895216   51    53  47\n",
        "\n",
-       "[62792224 rows x 7 columns]"
+       "[30211947 rows x 5 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,15 +182,14 @@
    "source": [
     "# Get retention data\n",
     "names = [\"addr\", \"time\", \"lvl\"]\n",
-    "data = pd.read_csv(\"../data/retention/retention2.csv.gz\", delimiter='\\t', names=names)\n",
+    "data = pd.read_csv(\"../data/retention/retention4.csv\", delimiter='\\t', names=names)\n",
     "data[\"lvl\"] = data[\"lvl\"].str.strip('[]').str.split(', ')\n",
     "data = data.explode(\"lvl\", ignore_index=True)\n",
     "data[\"lvl\"] = pd.to_numeric(data[\"lvl\"])\n",
+    "data = data[data[\"lvl\"] != 0]\n",
     "data[\"time\"] -= data.groupby(\"addr\")[\"time\"].transform(\"first\") \n",
-    "data[\"lvli\"] = data.groupby(\"addr\")[\"lvl\"].transform(\"first\")\n",
-    "data[\"i\"] = data.index % 16\n",
-    "data[\"tmin\"] = data[\"addr\"] % 60\n",
-    "data[\"tmax\"] = data[\"addr\"] % 60 + 4\n",
+    "data[\"lvli\"] = data[\"addr\"] % 64\n",
+    "data[\"i\"] = data.index % 48\n",
     "data"
    ]
   },
@@ -227,21 +202,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 16384\n",
-      "0.1 16384\n",
-      "1 16384\n",
-      "10 2336\n",
-      "100 15232\n",
-      "1000 15264\n",
-      "10000 16384\n",
-      "100000 15264\n"
+      "0 104676\n",
+      "0.1 94302\n",
+      "1 104676\n",
+      "10 35685\n",
+      "100 103038\n",
+      "1000 102531\n",
+      "10000 89193\n",
+      "100000 0\n"
      ]
     },
     {
@@ -270,65 +245,53 @@
        "      <th>lvl</th>\n",
        "      <th>lvli</th>\n",
        "      <th>i</th>\n",
-       "      <th>tmin</th>\n",
-       "      <th>tmax</th>\n",
        "      <th>timept</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1024</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>6</td>\n",
-       "      <td>6</td>\n",
        "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>8</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1024</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>8</td>\n",
-       "      <td>6</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>8</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1024</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>7</td>\n",
-       "      <td>6</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0</td>\n",
        "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>8</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1024</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>5</td>\n",
-       "      <td>6</td>\n",
-       "      <td>3</td>\n",
        "      <td>4</td>\n",
-       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1024</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>6</td>\n",
-       "      <td>6</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0</td>\n",
        "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>8</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -339,87 +302,75 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>62790555</th>\n",
-       "      <td>1977</td>\n",
-       "      <td>80014.943718</td>\n",
-       "      <td>56</td>\n",
-       "      <td>58</td>\n",
-       "      <td>11</td>\n",
-       "      <td>57</td>\n",
-       "      <td>61</td>\n",
-       "      <td>100000.0</td>\n",
+       "      <th>37176522</th>\n",
+       "      <td>2286</td>\n",
+       "      <td>9012.017305</td>\n",
+       "      <td>45</td>\n",
+       "      <td>46</td>\n",
+       "      <td>42</td>\n",
+       "      <td>10000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>62790556</th>\n",
-       "      <td>1977</td>\n",
-       "      <td>80014.943718</td>\n",
-       "      <td>59</td>\n",
-       "      <td>58</td>\n",
-       "      <td>12</td>\n",
-       "      <td>57</td>\n",
-       "      <td>61</td>\n",
-       "      <td>100000.0</td>\n",
+       "      <th>37176524</th>\n",
+       "      <td>2286</td>\n",
+       "      <td>9012.017305</td>\n",
+       "      <td>44</td>\n",
+       "      <td>46</td>\n",
+       "      <td>44</td>\n",
+       "      <td>10000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>62790557</th>\n",
-       "      <td>1977</td>\n",
-       "      <td>80014.943718</td>\n",
-       "      <td>58</td>\n",
-       "      <td>58</td>\n",
-       "      <td>13</td>\n",
-       "      <td>57</td>\n",
-       "      <td>61</td>\n",
-       "      <td>100000.0</td>\n",
+       "      <th>37176525</th>\n",
+       "      <td>2286</td>\n",
+       "      <td>9012.017305</td>\n",
+       "      <td>39</td>\n",
+       "      <td>46</td>\n",
+       "      <td>45</td>\n",
+       "      <td>10000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>62790558</th>\n",
-       "      <td>1977</td>\n",
-       "      <td>80014.943718</td>\n",
-       "      <td>59</td>\n",
-       "      <td>58</td>\n",
-       "      <td>14</td>\n",
-       "      <td>57</td>\n",
-       "      <td>61</td>\n",
-       "      <td>100000.0</td>\n",
+       "      <th>37176526</th>\n",
+       "      <td>2286</td>\n",
+       "      <td>9012.017305</td>\n",
+       "      <td>43</td>\n",
+       "      <td>46</td>\n",
+       "      <td>46</td>\n",
+       "      <td>10000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>62790559</th>\n",
-       "      <td>1977</td>\n",
-       "      <td>80014.943718</td>\n",
-       "      <td>60</td>\n",
-       "      <td>58</td>\n",
-       "      <td>15</td>\n",
-       "      <td>57</td>\n",
-       "      <td>61</td>\n",
-       "      <td>100000.0</td>\n",
+       "      <th>37176527</th>\n",
+       "      <td>2286</td>\n",
+       "      <td>9012.017305</td>\n",
+       "      <td>43</td>\n",
+       "      <td>46</td>\n",
+       "      <td>47</td>\n",
+       "      <td>10000.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>113632 rows × 8 columns</p>\n",
+       "<p>634101 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "          addr          time  lvl  lvli   i  tmin  tmax    timept\n",
-       "0         1024      0.000000    6     6   0     4     8       0.0\n",
-       "1         1024      0.000000    8     6   1     4     8       0.0\n",
-       "2         1024      0.000000    7     6   2     4     8       0.0\n",
-       "3         1024      0.000000    5     6   3     4     8       0.0\n",
-       "4         1024      0.000000    6     6   4     4     8       0.0\n",
-       "...        ...           ...  ...   ...  ..   ...   ...       ...\n",
-       "62790555  1977  80014.943718   56    58  11    57    61  100000.0\n",
-       "62790556  1977  80014.943718   59    58  12    57    61  100000.0\n",
-       "62790557  1977  80014.943718   58    58  13    57    61  100000.0\n",
-       "62790558  1977  80014.943718   59    58  14    57    61  100000.0\n",
-       "62790559  1977  80014.943718   60    58  15    57    61  100000.0\n",
+       "          addr         time  lvl  lvli   i   timept\n",
+       "0            0     0.000000   11     0   0      0.0\n",
+       "1            0     0.000000   16     0   1      0.0\n",
+       "2            0     0.000000   13     0   2      0.0\n",
+       "3            0     0.000000    4     0   3      0.0\n",
+       "4            0     0.000000   14     0   4      0.0\n",
+       "...        ...          ...  ...   ...  ..      ...\n",
+       "37176522  2286  9012.017305   45    46  42  10000.0\n",
+       "37176524  2286  9012.017305   44    46  44  10000.0\n",
+       "37176525  2286  9012.017305   39    46  45  10000.0\n",
+       "37176526  2286  9012.017305   43    46  46  10000.0\n",
+       "37176527  2286  9012.017305   43    46  47  10000.0\n",
        "\n",
-       "[113632 rows x 8 columns]"
+       "[634101 rows x 6 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,12 +382,12 @@
     "for time in times:\n",
     "    idx = (data[\"time\"] - time).abs().groupby([data[\"addr\"], data[\"i\"]]).idxmin()\n",
     "    d = data[data.index.isin(idx)]\n",
-    "    d = d[(d[\"time\"] <= time*1.2) & (d[\"time\"] >= time*0.8)]\n",
+    "    d = d[(d[\"time\"] <= time*1.1) & (d[\"time\"] >= time*0.9)]\n",
     "    print(time, len(d))\n",
     "    d[\"timept\"] = time\n",
     "    tdata.append(d)\n",
     "tdata = pd.concat(tdata)\n",
-    "tdata.to_csv(\"../data/retention/retention2.min.csv.gz\")\n",
+    "tdata.to_csv(\"../data/retention/retention4.min.csv.gz\")\n",
     "tdata"
    ]
   }
