--- a/analysis/process_read_retention.ipynb
+++ b/analysis/process_read_retention.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>11</td>\n",
+       "      <td>13</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -76,7 +76,7 @@
        "      <th>1</th>\n",
        "      <td>0</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>16</td>\n",
+       "      <td>11</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -84,7 +84,7 @@
        "      <th>2</th>\n",
        "      <td>0</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>13</td>\n",
+       "      <td>8</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
@@ -92,7 +92,7 @@
        "      <th>3</th>\n",
        "      <td>0</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>4</td>\n",
+       "      <td>7</td>\n",
        "      <td>0</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
@@ -100,7 +100,7 @@
        "      <th>4</th>\n",
        "      <td>0</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>14</td>\n",
+       "      <td>19</td>\n",
        "      <td>0</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
@@ -113,68 +113,68 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>37183962</th>\n",
-       "      <td>1845</td>\n",
-       "      <td>11923.895216</td>\n",
-       "      <td>52</td>\n",
-       "      <td>53</td>\n",
+       "      <th>18661002</th>\n",
+       "      <td>754</td>\n",
+       "      <td>1498.068309</td>\n",
+       "      <td>47</td>\n",
+       "      <td>50</td>\n",
        "      <td>42</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>37183964</th>\n",
-       "      <td>1845</td>\n",
-       "      <td>11923.895216</td>\n",
-       "      <td>49</td>\n",
-       "      <td>53</td>\n",
+       "      <th>18661004</th>\n",
+       "      <td>754</td>\n",
+       "      <td>1498.068309</td>\n",
+       "      <td>46</td>\n",
+       "      <td>50</td>\n",
        "      <td>44</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>37183965</th>\n",
-       "      <td>1845</td>\n",
-       "      <td>11923.895216</td>\n",
+       "      <th>18661005</th>\n",
+       "      <td>754</td>\n",
+       "      <td>1498.068309</td>\n",
+       "      <td>46</td>\n",
        "      <td>50</td>\n",
-       "      <td>53</td>\n",
        "      <td>45</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>37183966</th>\n",
-       "      <td>1845</td>\n",
-       "      <td>11923.895216</td>\n",
+       "      <th>18661006</th>\n",
+       "      <td>754</td>\n",
+       "      <td>1498.068309</td>\n",
+       "      <td>49</td>\n",
        "      <td>50</td>\n",
-       "      <td>53</td>\n",
        "      <td>46</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>37183967</th>\n",
-       "      <td>1845</td>\n",
-       "      <td>11923.895216</td>\n",
-       "      <td>51</td>\n",
-       "      <td>53</td>\n",
+       "      <th>18661007</th>\n",
+       "      <td>754</td>\n",
+       "      <td>1498.068309</td>\n",
+       "      <td>47</td>\n",
+       "      <td>50</td>\n",
        "      <td>47</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>30211947 rows × 5 columns</p>\n",
+       "<p>15162069 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "          addr          time  lvl  lvli   i\n",
-       "0            0      0.000000   11     0   0\n",
-       "1            0      0.000000   16     0   1\n",
-       "2            0      0.000000   13     0   2\n",
-       "3            0      0.000000    4     0   3\n",
-       "4            0      0.000000   14     0   4\n",
-       "...        ...           ...  ...   ...  ..\n",
-       "37183962  1845  11923.895216   52    53  42\n",
-       "37183964  1845  11923.895216   49    53  44\n",
-       "37183965  1845  11923.895216   50    53  45\n",
-       "37183966  1845  11923.895216   50    53  46\n",
-       "37183967  1845  11923.895216   51    53  47\n",
+       "          addr         time  lvl  lvli   i\n",
+       "0            0     0.000000   13     0   0\n",
+       "1            0     0.000000   11     0   1\n",
+       "2            0     0.000000    8     0   2\n",
+       "3            0     0.000000    7     0   3\n",
+       "4            0     0.000000   19     0   4\n",
+       "...        ...          ...  ...   ...  ..\n",
+       "18661002   754  1498.068309   47    50  42\n",
+       "18661004   754  1498.068309   46    50  44\n",
+       "18661005   754  1498.068309   46    50  45\n",
+       "18661006   754  1498.068309   49    50  46\n",
+       "18661007   754  1498.068309   47    50  47\n",
        "\n",
-       "[30211947 rows x 5 columns]"
+       "[15162069 rows x 5 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
    "source": [
     "# Get retention data\n",
     "names = [\"addr\", \"time\", \"lvl\"]\n",
-    "data = pd.read_csv(\"../data/retention/retention4.csv\", delimiter='\\t', names=names)\n",
+    "data = pd.read_csv(\"../data/retention/retention4.csv.gz\", delimiter='\\t', names=names)\n",
     "data[\"lvl\"] = data[\"lvl\"].str.strip('[]').str.split(', ')\n",
     "data = data.explode(\"lvl\", ignore_index=True)\n",
     "data[\"lvl\"] = pd.to_numeric(data[\"lvl\"])\n",
@@ -202,20 +202,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 104676\n",
-      "0.1 94302\n",
-      "1 104676\n",
-      "10 35685\n",
-      "100 103038\n",
-      "1000 102531\n",
-      "10000 89193\n",
+      "0 32175\n",
+      "0.1 29172\n",
+      "1 32175\n",
+      "10 4797\n",
+      "100 31785\n",
+      "1000 30498\n",
+      "10000 6240\n",
       "100000 0\n"
      ]
     },
@@ -253,7 +253,7 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>11</td>\n",
+       "      <td>13</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
@@ -262,7 +262,7 @@
        "      <th>1</th>\n",
        "      <td>0</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>16</td>\n",
+       "      <td>11</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0.0</td>\n",
@@ -271,7 +271,7 @@
        "      <th>2</th>\n",
        "      <td>0</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>13</td>\n",
+       "      <td>8</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>0.0</td>\n",
@@ -280,7 +280,7 @@
        "      <th>3</th>\n",
        "      <td>0</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>4</td>\n",
+       "      <td>7</td>\n",
        "      <td>0</td>\n",
        "      <td>3</td>\n",
        "      <td>0.0</td>\n",
@@ -289,7 +289,7 @@
        "      <th>4</th>\n",
        "      <td>0</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>14</td>\n",
+       "      <td>19</td>\n",
        "      <td>0</td>\n",
        "      <td>4</td>\n",
        "      <td>0.0</td>\n",
@@ -304,73 +304,73 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>37176522</th>\n",
-       "      <td>2286</td>\n",
-       "      <td>9012.017305</td>\n",
-       "      <td>45</td>\n",
-       "      <td>46</td>\n",
+       "      <th>18632442</th>\n",
+       "      <td>159</td>\n",
+       "      <td>9004.272041</td>\n",
+       "      <td>25</td>\n",
+       "      <td>31</td>\n",
        "      <td>42</td>\n",
        "      <td>10000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>37176524</th>\n",
-       "      <td>2286</td>\n",
-       "      <td>9012.017305</td>\n",
-       "      <td>44</td>\n",
-       "      <td>46</td>\n",
+       "      <th>18632444</th>\n",
+       "      <td>159</td>\n",
+       "      <td>9004.272041</td>\n",
+       "      <td>20</td>\n",
+       "      <td>31</td>\n",
        "      <td>44</td>\n",
        "      <td>10000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>37176525</th>\n",
-       "      <td>2286</td>\n",
-       "      <td>9012.017305</td>\n",
-       "      <td>39</td>\n",
-       "      <td>46</td>\n",
+       "      <th>18632445</th>\n",
+       "      <td>159</td>\n",
+       "      <td>9004.272041</td>\n",
+       "      <td>26</td>\n",
+       "      <td>31</td>\n",
        "      <td>45</td>\n",
        "      <td>10000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>37176526</th>\n",
-       "      <td>2286</td>\n",
-       "      <td>9012.017305</td>\n",
-       "      <td>43</td>\n",
-       "      <td>46</td>\n",
+       "      <th>18632446</th>\n",
+       "      <td>159</td>\n",
+       "      <td>9004.272041</td>\n",
+       "      <td>27</td>\n",
+       "      <td>31</td>\n",
        "      <td>46</td>\n",
        "      <td>10000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>37176527</th>\n",
-       "      <td>2286</td>\n",
-       "      <td>9012.017305</td>\n",
-       "      <td>43</td>\n",
-       "      <td>46</td>\n",
+       "      <th>18632447</th>\n",
+       "      <td>159</td>\n",
+       "      <td>9004.272041</td>\n",
+       "      <td>22</td>\n",
+       "      <td>31</td>\n",
        "      <td>47</td>\n",
        "      <td>10000.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>634101 rows × 6 columns</p>\n",
+       "<p>166842 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "          addr         time  lvl  lvli   i   timept\n",
-       "0            0     0.000000   11     0   0      0.0\n",
-       "1            0     0.000000   16     0   1      0.0\n",
-       "2            0     0.000000   13     0   2      0.0\n",
-       "3            0     0.000000    4     0   3      0.0\n",
-       "4            0     0.000000   14     0   4      0.0\n",
+       "0            0     0.000000   13     0   0      0.0\n",
+       "1            0     0.000000   11     0   1      0.0\n",
+       "2            0     0.000000    8     0   2      0.0\n",
+       "3            0     0.000000    7     0   3      0.0\n",
+       "4            0     0.000000   19     0   4      0.0\n",
        "...        ...          ...  ...   ...  ..      ...\n",
-       "37176522  2286  9012.017305   45    46  42  10000.0\n",
-       "37176524  2286  9012.017305   44    46  44  10000.0\n",
-       "37176525  2286  9012.017305   39    46  45  10000.0\n",
-       "37176526  2286  9012.017305   43    46  46  10000.0\n",
-       "37176527  2286  9012.017305   43    46  47  10000.0\n",
+       "18632442   159  9004.272041   25    31  42  10000.0\n",
+       "18632444   159  9004.272041   20    31  44  10000.0\n",
+       "18632445   159  9004.272041   26    31  45  10000.0\n",
+       "18632446   159  9004.272041   27    31  46  10000.0\n",
+       "18632447   159  9004.272041   22    31  47  10000.0\n",
        "\n",
-       "[634101 rows x 6 columns]"
+       "[166842 rows x 6 columns]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
