Clean up sweeps

--- a/analysis/process_read_retention.ipynb
+++ b/analysis/process_read_retention.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -67,42 +67,42 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>13</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>11</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>8</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>7</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>19</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -113,68 +113,68 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18661002</th>\n",
-       "      <td>754</td>\n",
-       "      <td>1498.068309</td>\n",
-       "      <td>47</td>\n",
-       "      <td>50</td>\n",
+       "      <th>196602</th>\n",
+       "      <td>4095</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>62</td>\n",
+       "      <td>63</td>\n",
        "      <td>42</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18661004</th>\n",
-       "      <td>754</td>\n",
-       "      <td>1498.068309</td>\n",
-       "      <td>46</td>\n",
-       "      <td>50</td>\n",
+       "      <th>196604</th>\n",
+       "      <td>4095</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>62</td>\n",
+       "      <td>63</td>\n",
        "      <td>44</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18661005</th>\n",
-       "      <td>754</td>\n",
-       "      <td>1498.068309</td>\n",
-       "      <td>46</td>\n",
-       "      <td>50</td>\n",
+       "      <th>196605</th>\n",
+       "      <td>4095</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>64</td>\n",
+       "      <td>63</td>\n",
        "      <td>45</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18661006</th>\n",
-       "      <td>754</td>\n",
-       "      <td>1498.068309</td>\n",
-       "      <td>49</td>\n",
-       "      <td>50</td>\n",
+       "      <th>196606</th>\n",
+       "      <td>4095</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>61</td>\n",
+       "      <td>63</td>\n",
        "      <td>46</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18661007</th>\n",
-       "      <td>754</td>\n",
-       "      <td>1498.068309</td>\n",
-       "      <td>47</td>\n",
-       "      <td>50</td>\n",
+       "      <th>196607</th>\n",
+       "      <td>4095</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>61</td>\n",
+       "      <td>63</td>\n",
        "      <td>47</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>15162069 rows × 5 columns</p>\n",
+       "<p>151552 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "          addr         time  lvl  lvli   i\n",
-       "0            0     0.000000   13     0   0\n",
-       "1            0     0.000000   11     0   1\n",
-       "2            0     0.000000    8     0   2\n",
-       "3            0     0.000000    7     0   3\n",
-       "4            0     0.000000   19     0   4\n",
-       "...        ...          ...  ...   ...  ..\n",
-       "18661002   754  1498.068309   47    50  42\n",
-       "18661004   754  1498.068309   46    50  44\n",
-       "18661005   754  1498.068309   46    50  45\n",
-       "18661006   754  1498.068309   49    50  46\n",
-       "18661007   754  1498.068309   47    50  47\n",
+       "        addr  time  lvl  lvli   i\n",
+       "0          0   0.0    1     0   0\n",
+       "1          0   0.0    2     0   1\n",
+       "3          0   0.0    3     0   3\n",
+       "4          0   0.0    3     0   4\n",
+       "5          0   0.0    1     0   5\n",
+       "...      ...   ...  ...   ...  ..\n",
+       "196602  4095   0.0   62    63  42\n",
+       "196604  4095   0.0   62    63  44\n",
+       "196605  4095   0.0   64    63  45\n",
+       "196606  4095   0.0   61    63  46\n",
+       "196607  4095   0.0   61    63  47\n",
        "\n",
-       "[15162069 rows x 5 columns]"
+       "[151552 rows x 5 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,14 +182,15 @@
    "source": [
     "# Get retention data\n",
     "names = [\"addr\", \"time\", \"lvl\"]\n",
-    "data = pd.read_csv(\"../data/retention/retention4.csv.gz\", delimiter='\\t', names=names)\n",
+    "filename = \"../w32.csv\"\n",
+    "data = pd.read_csv(filename, delimiter='\\t', names=names)\n",
     "data[\"lvl\"] = data[\"lvl\"].str.strip('[]').str.split(', ')\n",
     "data = data.explode(\"lvl\", ignore_index=True)\n",
     "data[\"lvl\"] = pd.to_numeric(data[\"lvl\"])\n",
-    "data = data[data[\"lvl\"] != 0]\n",
     "data[\"time\"] -= data.groupby(\"addr\")[\"time\"].transform(\"first\") \n",
     "data[\"lvli\"] = data[\"addr\"] % 64\n",
     "data[\"i\"] = data.index % 48\n",
+    "data = data[~data[\"i\"].isin([2, 7, 16, 19, 23, 24, 29, 33, 38, 39, 43])]\n",
     "data"
    ]
   },
@@ -202,21 +203,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 32175\n",
-      "0.1 29172\n",
-      "1 32175\n",
-      "10 4797\n",
-      "100 31785\n",
-      "1000 30498\n",
-      "10000 6240\n",
-      "100000 0\n"
+      "0 151552\n"
      ]
     },
     {
@@ -252,47 +246,47 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>13</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>11</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
        "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>8</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>7</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>3</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>19</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -304,73 +298,73 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18632442</th>\n",
-       "      <td>159</td>\n",
-       "      <td>9004.272041</td>\n",
-       "      <td>25</td>\n",
-       "      <td>31</td>\n",
+       "      <th>196602</th>\n",
+       "      <td>4095</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>62</td>\n",
+       "      <td>63</td>\n",
        "      <td>42</td>\n",
-       "      <td>10000.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18632444</th>\n",
-       "      <td>159</td>\n",
-       "      <td>9004.272041</td>\n",
-       "      <td>20</td>\n",
-       "      <td>31</td>\n",
+       "      <th>196604</th>\n",
+       "      <td>4095</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>62</td>\n",
+       "      <td>63</td>\n",
        "      <td>44</td>\n",
-       "      <td>10000.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18632445</th>\n",
-       "      <td>159</td>\n",
-       "      <td>9004.272041</td>\n",
-       "      <td>26</td>\n",
-       "      <td>31</td>\n",
+       "      <th>196605</th>\n",
+       "      <td>4095</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>64</td>\n",
+       "      <td>63</td>\n",
        "      <td>45</td>\n",
-       "      <td>10000.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18632446</th>\n",
-       "      <td>159</td>\n",
-       "      <td>9004.272041</td>\n",
-       "      <td>27</td>\n",
-       "      <td>31</td>\n",
+       "      <th>196606</th>\n",
+       "      <td>4095</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>61</td>\n",
+       "      <td>63</td>\n",
        "      <td>46</td>\n",
-       "      <td>10000.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18632447</th>\n",
-       "      <td>159</td>\n",
-       "      <td>9004.272041</td>\n",
-       "      <td>22</td>\n",
-       "      <td>31</td>\n",
+       "      <th>196607</th>\n",
+       "      <td>4095</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>61</td>\n",
+       "      <td>63</td>\n",
        "      <td>47</td>\n",
-       "      <td>10000.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>166842 rows × 6 columns</p>\n",
+       "<p>151552 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "          addr         time  lvl  lvli   i   timept\n",
-       "0            0     0.000000   13     0   0      0.0\n",
-       "1            0     0.000000   11     0   1      0.0\n",
-       "2            0     0.000000    8     0   2      0.0\n",
-       "3            0     0.000000    7     0   3      0.0\n",
-       "4            0     0.000000   19     0   4      0.0\n",
-       "...        ...          ...  ...   ...  ..      ...\n",
-       "18632442   159  9004.272041   25    31  42  10000.0\n",
-       "18632444   159  9004.272041   20    31  44  10000.0\n",
-       "18632445   159  9004.272041   26    31  45  10000.0\n",
-       "18632446   159  9004.272041   27    31  46  10000.0\n",
-       "18632447   159  9004.272041   22    31  47  10000.0\n",
+       "        addr  time  lvl  lvli   i  timept\n",
+       "0          0   0.0    1     0   0       0\n",
+       "1          0   0.0    2     0   1       0\n",
+       "3          0   0.0    3     0   3       0\n",
+       "4          0   0.0    3     0   4       0\n",
+       "5          0   0.0    1     0   5       0\n",
+       "...      ...   ...  ...   ...  ..     ...\n",
+       "196602  4095   0.0   62    63  42       0\n",
+       "196604  4095   0.0   62    63  44       0\n",
+       "196605  4095   0.0   64    63  45       0\n",
+       "196606  4095   0.0   61    63  46       0\n",
+       "196607  4095   0.0   61    63  47       0\n",
        "\n",
-       "[166842 rows x 6 columns]"
+       "[151552 rows x 6 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,6 +373,7 @@
     "# Get target times\n",
     "tdata = []\n",
     "times = [0, 0.1, 1, 10, 100, 1000, 10000, 100000]\n",
+    "times = [0]\n",
     "for time in times:\n",
     "    idx = (data[\"time\"] - time).abs().groupby([data[\"addr\"], data[\"i\"]]).idxmin()\n",
     "    d = data[data.index.isin(idx)]\n",
@@ -387,7 +382,11 @@
     "    d[\"timept\"] = time\n",
     "    tdata.append(d)\n",
     "tdata = pd.concat(tdata)\n",
-    "tdata.to_csv(\"../data/retention/retention4.min.csv.gz\")\n",
+    "minfilename = filename.split(\".\")\n",
+    "minfilename.insert(-1, \"min\")\n",
+    "minfilename.append(\"gz\")\n",
+    "minfilename = \".\".join(minfilename) \n",
+    "tdata.to_csv(minfilename)\n",
     "tdata"
    ]
   }
