--- a/opt/config33.ipynb
+++ b/opt/config33.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,180 +28,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>addr</th>\n",
-       "      <th>t</th>\n",
-       "      <th>vwl</th>\n",
-       "      <th>vbl</th>\n",
-       "      <th>pw</th>\n",
-       "      <th>gi</th>\n",
-       "      <th>gf</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>46141</td>\n",
-       "      <td>1.698431e+09</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>8</td>\n",
-       "      <td>8.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>11735</td>\n",
-       "      <td>1.698431e+09</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>7</td>\n",
-       "      <td>7.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>41965</td>\n",
-       "      <td>1.698431e+09</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>9</td>\n",
-       "      <td>9.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>24212</td>\n",
-       "      <td>1.698431e+09</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>7</td>\n",
-       "      <td>7.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>63363</td>\n",
-       "      <td>1.698431e+09</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>8</td>\n",
-       "      <td>9.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32896</th>\n",
-       "      <td>48805</td>\n",
-       "      <td>1.698432e+09</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>12</td>\n",
-       "      <td>12.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32897</th>\n",
-       "      <td>33704</td>\n",
-       "      <td>1.698432e+09</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>9</td>\n",
-       "      <td>9.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32898</th>\n",
-       "      <td>62039</td>\n",
-       "      <td>1.698432e+09</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>8</td>\n",
-       "      <td>8.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32899</th>\n",
-       "      <td>31298</td>\n",
-       "      <td>1.698432e+09</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>7</td>\n",
-       "      <td>6.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32900</th>\n",
-       "      <td>31081</td>\n",
-       "      <td>1.698432e+09</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>10</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1217346 rows × 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        addr             t  vwl  vbl  pw  gi    gf\n",
-       "0      46141  1.698431e+09    0    0   1   8   8.0\n",
-       "1      11735  1.698431e+09    0    1   1   7   7.0\n",
-       "2      41965  1.698431e+09    0    2   1   9   9.0\n",
-       "3      24212  1.698431e+09    0    3   1   7   7.0\n",
-       "4      63363  1.698431e+09    0    4   1   8   9.0\n",
-       "...      ...           ...  ...  ...  ..  ..   ...\n",
-       "32896  48805  1.698432e+09    0    0   1  12  12.0\n",
-       "32897  33704  1.698432e+09    0    1   1   9   9.0\n",
-       "32898  62039  1.698432e+09    0    2   1   8   8.0\n",
-       "32899  31298  1.698432e+09    0    3   1   7   6.0\n",
-       "32900  31081  1.698432e+09    0    4   1  10   NaN\n",
-       "\n",
-       "[1217346 rows x 7 columns]"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# SET sweep data\n",
-    "setdata = pd.read_csv(f\"../data/sweep/setsweep33_newest2.csv\", delimiter=\"\\t\", names=[\"addr\", \"t\", \"vwl\", \"vbl\", \"pw\"] + [f\"gi[{i}]\" for i in range(48)] + [f\"gf[{i}]\" for i in range(48)])\n",
+    "setdata = pd.read_csv(f\"../data/sweep/setsweep33.csv\", delimiter=\"\\t\", names=[\"addr\", \"t\", \"vwl\", \"vbl\", \"pw\"] + [f\"gi[{i}]\" for i in range(48)] + [f\"gf[{i}]\" for i in range(48)])\n",
     "setdata = pd.concat([setdata[[\"addr\",\"t\",\"vwl\",\"vbl\",\"pw\",f\"gi[{i}]\",f\"gf[{i}]\"]].rename(columns={f\"gi[{i}]\" : \"gi\", f\"gf[{i}]\" : \"gf\"}) for i in range(48)])\n",
     "setdata = setdata[setdata[\"gf\"] != 0]\n",
     "setdata"
@@ -209,25 +41,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tailstart, avgopt, tailstop = 3 13 26\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_1779624/3742304437.py:53: UserWarning: Creating legend with loc=\"best\" can be slow with large amounts of data.\n",
-      "  plt.tight_layout()\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# FIRST-ORDER OPTIMIZATION\n",
     "p = 0.999\n",
